--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,8 @@
     "tabs",
     "storage",
     "scripting",
-    "cookies"
+    "cookies",
+    "downloads"
   ],
   "host_permissions": [
     "https://chatgpt.com/*"
